8057129: Fix AIX build after the Extend CompileCommand=option change 8055286

Reviewed-by: kvn